--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tic-Tac-Toe</title>
   <link rel="stylesheet" href="styles.css">
   <script src="app.js" defer></script>
 </head>
 <body>
-  
+  <header>
+    <h1>Tic Tac toe game!</h1>
+  </header>
+  <main>
+    <div id="Start-input">
+      <label for="player-one-input"> Please put player one name:</label>
+      <input type="text" name="player-one-input" id="player-one-input">
+      <label for="player-two-input"> Please put player two name:</label>
+      <input type="text" name="player-two-input" id="player-two-input">
+      <button id="start-button">Start game!</button>
+    </div>
+    <div id="point-display">
+      <p><span id="player-one-name"></span> <span id="playe-one-points"></span></p>
+      <p><span id="plyer-two-name"></span><span id="playe-two-points"></span></p>
+    </div>
+    <div id="game-board">
+      <div class="play-button" id="0"></div>
+      <div class="play-button" id="1"></div>
+      <div class="play-button" id="2"></div>
+      <div class="play-button" id="3"></div>
+      <div class="play-button" id="4"></div>
+      <div class="play-button" id="5"></div>
+      <div class="play-button" id="6"></div>
+      <div class="play-button" id="7"></div>
+      <div class="play-button" id="8"></div>
+    </div>
+  </main>
+
 </body>
 </html>
